Update StringTemplates.java